--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -9,64 +9,24 @@ fontawesome-webfont.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.tt
 fontawesome-webfont/index.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
 fontawesome-webfont.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
 fontawesome-webfont/index.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+glyphicons-halflings-regular.eot: glyphicons-halflings-regular-a976b4f46980969d9792e0ff9f3afc17.eot
+glyphicons-halflings-regular/index.eot: glyphicons-halflings-regular-a976b4f46980969d9792e0ff9f3afc17.eot
+glyphicons-halflings-regular.svg: glyphicons-halflings-regular-595b0dff8f518e7a10f758209838ab0b.svg
+glyphicons-halflings-regular/index.svg: glyphicons-halflings-regular-595b0dff8f518e7a10f758209838ab0b.svg
+glyphicons-halflings-regular.ttf: glyphicons-halflings-regular-b7248b70474d970f596df264c4f9b5ab.ttf
+glyphicons-halflings-regular/index.ttf: glyphicons-halflings-regular-b7248b70474d970f596df264c4f9b5ab.ttf
+glyphicons-halflings-regular.woff: glyphicons-halflings-regular-c866ecc8bb1c848e2a8557b67499891d.woff
+glyphicons-halflings-regular/index.woff: glyphicons-halflings-regular-c866ecc8bb1c848e2a8557b67499891d.woff
 alert-overlay.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
 alert-overlay/index.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
-background.png: background-fda7cbe4b71ca00010aa6277a08ae735.png
-background/index.png: background-fda7cbe4b71ca00010aa6277a08ae735.png
-community-dining.png: community-dining-d16cdfbbf0a143259195a670905f8ff1.png
-community-dining/index.png: community-dining-d16cdfbbf0a143259195a670905f8ff1.png
-contentBG.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
-contentBG/index.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
-eventIcon.png: eventIcon-adcaf8e05642d13f9a706facacc961a7.png
-eventIcon/index.png: eventIcon-adcaf8e05642d13f9a706facacc961a7.png
-eventImage.png: eventImage-b393aabfe2ffca60953921e8bb0e4b6b.png
-eventImage/index.png: eventImage-b393aabfe2ffca60953921e8bb0e4b6b.png
 facebookLogo.png: facebookLogo-8e2ecc9aca22ad9a28bab445d6cb28a6.png
 facebookLogo/index.png: facebookLogo-8e2ecc9aca22ad9a28bab445d6cb28a6.png
-glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
-glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
-glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
-glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
-groupsBG.png: groupsBG-7389488e3dff557f47c0bab111c01a94.png
-groupsBG/index.png: groupsBG-7389488e3dff557f47c0bab111c01a94.png
-headerBG.png: headerBG-d4c95e03b452f2190b06dfa4a6f8da78.png
-headerBG/index.png: headerBG-d4c95e03b452f2190b06dfa4a6f8da78.png
-img/1.jpg: img/1-b1e273e6a24a445d7293cf79aac3451e.jpg
-img/1/index.jpg: img/1-b1e273e6a24a445d7293cf79aac3451e.jpg
-img/2.jpg: img/2-80672192a08b2b303d18cc18d740647a.jpg
-img/2/index.jpg: img/2-80672192a08b2b303d18cc18d740647a.jpg
-img/3.jpg: img/3-81b8a81747a731861cfa013b40685003.jpg
-img/3/index.jpg: img/3-81b8a81747a731861cfa013b40685003.jpg
-img/arrow-left-black.png: img/arrow-left-black-563a8bd3f9ea86177482c089ad389660.png
-img/arrow-left-black/index.png: img/arrow-left-black-563a8bd3f9ea86177482c089ad389660.png
-img/arrow-right-black.png: img/arrow-right-black-8cf46a4aa9662bf041b90ce4bc080775.png
-img/arrow-right-black/index.png: img/arrow-right-black-8cf46a4aa9662bf041b90ce4bc080775.png
-img/preloader.gif: img/preloader-494b2f4661d8df7809cf7a491abc5a5e.gif
-img/preloader/index.gif: img/preloader-494b2f4661d8df7809cf7a491abc5a5e.gif
-joinEvent.png: joinEvent-24f63f0482901a83f5502397bf7f26ff.png
-joinEvent/index.png: joinEvent-24f63f0482901a83f5502397bf7f26ff.png
 loader.gif: loader-f334e3d7ffee71748d69150ba81ddf81.gif
 loader/index.gif: loader-f334e3d7ffee71748d69150ba81ddf81.gif
 locationIcon.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 locationIcon/index.png: locationIcon-4fbf527f6b20b0ee83a793f4607a8309.png
 logo.png: logo-e3b941e5fb1677289e0d7cd6aa869c21.png
 logo/index.png: logo-e3b941e5fb1677289e0d7cd6aa869c21.png
-logo_shrunk.png: logo_shrunk-36cd05e7145eeeb765ed9c861e483479.png
-logo_shrunk/index.png: logo_shrunk-36cd05e7145eeeb765ed9c861e483479.png
-noProfilePic.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
-noProfilePic/index.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
-poloroid.png: poloroid-2a2c3d331a8546fcac4aa0d72edc90ce.png
-poloroid/index.png: poloroid-2a2c3d331a8546fcac4aa0d72edc90ce.png
-shareEvent.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
-shareEvent/index.png: shareEvent-aece2864ddad7768e2dbbecbdaf5addd.png
-signup_image.png: signup_image-be4128c2b97a923febd2f0222ec0aa34.png
-signup_image/index.png: signup_image-be4128c2b97a923febd2f0222ec0aa34.png
-timeIcon.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
-timeIcon/index.png: timeIcon-030cbb9a35b95c008949e1e1af48b31f.png
-topBarBG.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
-topBarBG/index.png: topBarBG-78e160f5aac3985110e62277150ecf74.png
-waterfall.jpg: waterfall-509fd8265fd4c6e23f3d2c5cc9745bd3.jpg
-waterfall/index.jpg: waterfall-509fd8265fd4c6e23f3d2c5cc9745bd3.jpg
 admin/application.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/application/index.js: admin/application-1b13569e9620782f423d4cd3ce931750.js
 admin/highcharts.js: admin/highcharts-8b90df74ca79c5e04628c3f5e8cfeaf2.js
@@ -79,43 +39,36 @@ bootstrap-multiselect.js: bootstrap-multiselect-1343b2f9849c0ea8afd0c2ef933c132e
 bootstrap-multiselect/index.js: bootstrap-multiselect-1343b2f9849c0ea8afd0c2ef933c132e.js
 bootstrap-timepicker.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
 bootstrap-timepicker/index.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
-bootstrap.js: bootstrap-c548b36591d6d4b5e206961092e41eb8.js
-bootstrap/index.js: bootstrap-c548b36591d6d4b5e206961092e41eb8.js
+bootstrap.js: bootstrap-6b35568bf0924f3b6c31fa3d33057871.js
+bootstrap/index.js: bootstrap-6b35568bf0924f3b6c31fa3d33057871.js
 closed-event-overlay.js: closed-event-overlay-2704597afb0fa4de1aeaf8ab96d26e3f.js
 closed-event-overlay/index.js: closed-event-overlay-2704597afb0fa4de1aeaf8ab96d26e3f.js
 cycle.js: cycle-61ca7a15f44c5f606dfad5ac283a0a53.js
 cycle/index.js: cycle-61ca7a15f44c5f606dfad5ac283a0a53.js
 events.js: events-cff7de0dcc014ec7641f9fe5c1ce3a88.js
 events/index.js: events-cff7de0dcc014ec7641f9fe5c1ce3a88.js
-index.html: index-dc4e7e08d4bfba4dbf19714fe6628101.html
-jquery-1.9.1.js: jquery-1.9.1-186cad25611b3c790cb50517ee029d2a.js
-jquery-1/index.9.1.js: jquery-1.9.1-186cad25611b3c790cb50517ee029d2a.js
 jquery.bootstrap.wizard.js: jquery.bootstrap.wizard-fb0689402e3e80713289dd7962a864ab.js
 jquery/index.bootstrap.wizard.js: jquery.bootstrap.wizard-fb0689402e3e80713289dd7962a864ab.js
-jquery.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
-jquery/index.gallery.js: jquery.gallery-2182d6d54cc1b5c5feb2ef78fbde7d0d.js
 restaurant_picker.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 restaurant_picker/index.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 select2.js: select2-76f1a0965197b9543da9c2e702d90feb.js
 select2/index.js: select2-76f1a0965197b9543da9c2e702d90feb.js
-zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
-zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
 admin/admin.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/admin/index.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/application.css: admin/application-a2fb5098b7dbb6232e917179a16748cb.css
 admin/application/index.css: admin/application-a2fb5098b7dbb6232e917179a16748cb.css
-application.css: application-6667b26260eff7f21eacdb3890dd4b45.css
-application/index.css: application-6667b26260eff7f21eacdb3890dd4b45.css
+application.css: application-e596d134908a02bfffafe47d9373dad1.css
+application/index.css: application-e596d134908a02bfffafe47d9373dad1.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
 bootstrap-timepicker/index.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
-bootstrap.css: bootstrap-2e7db0bcf54e1280ab0c2a9319879a1f.css
-bootstrap/index.css: bootstrap-2e7db0bcf54e1280ab0c2a9319879a1f.css
+bootstrap.css: bootstrap-ddb0d7d87e8bb7119e902e3e8998df0d.css
+bootstrap/index.css: bootstrap-ddb0d7d87e8bb7119e902e3e8998df0d.css
 buttons.css: buttons-7b5425fb8695ca124851c869e9f2a789.css
 buttons/index.css: buttons-7b5425fb8695ca124851c869e9f2a789.css
-custom.css: custom-bd7b102b73bc95fdabfbfb006141a033.css
-custom/index.css: custom-bd7b102b73bc95fdabfbfb006141a033.css
+custom.css: custom-941a9f98f9384518f9943dd2610e289d.css
+custom/index.css: custom-941a9f98f9384518f9943dd2610e289d.css
 datepicker.css: datepicker-f030298a599c581d22476f8572d7386d.css
 datepicker/index.css: datepicker-f030298a599c581d22476f8572d7386d.css
 font-awesome-ie7.css: font-awesome-ie7-e0360026c3687b244fedb277b8f6bf17.css
@@ -126,9 +79,7 @@ prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 select2.css: select2-b3fa53946b9cdf68e3de6b61f61a2f58.css
 select2/index.css: select2-b3fa53946b9cdf68e3de6b61f61a2f58.css
-style.css: style-70505a8e2699b32430172960bf40f16e.css
-style/index.css: style-70505a8e2699b32430172960bf40f16e.css
-zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
-zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
+style.css: style-a683a87e2eaf6b1f9d0faae0778ead0a.css
+style/index.css: style-a683a87e2eaf6b1f9d0faae0778ead0a.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
