--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -35,6 +35,8 @@ application.js: application-18f4f125bfb75512f42e48d3d479b185.js
 application/index.js: application-18f4f125bfb75512f42e48d3d479b185.js
 bootstrap-datepicker.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
 bootstrap-datepicker/index.js: bootstrap-datepicker-ea267d0f4b58e4c693968c4210e25490.js
+bootstrap-markdown.js: bootstrap-markdown-ddd3bd546cc4fb84d37bee0768559f56.js
+bootstrap-markdown/index.js: bootstrap-markdown-ddd3bd546cc4fb84d37bee0768559f56.js
 bootstrap-multiselect.js: bootstrap-multiselect-1343b2f9849c0ea8afd0c2ef933c132e.js
 bootstrap-multiselect/index.js: bootstrap-multiselect-1343b2f9849c0ea8afd0c2ef933c132e.js
 bootstrap-timepicker.js: bootstrap-timepicker-821328b7b6f5603a36ba112e7c3f8042.js
@@ -53,16 +55,22 @@ jquery.bootstrap.wizard.js: jquery.bootstrap.wizard-fb0689402e3e80713289dd7962a8
 jquery/index.bootstrap.wizard.js: jquery.bootstrap.wizard-fb0689402e3e80713289dd7962a864ab.js
 jquery.nanoscroller.min.js: jquery.nanoscroller.min-69955875e8b784295566c9e508b2af21.js
 jquery/index.nanoscroller.min.js: jquery.nanoscroller.min-69955875e8b784295566c9e508b2af21.js
+markdown.js: markdown-684a6b72b8048c478c073e808e2ff3ed.js
+markdown/index.js: markdown-684a6b72b8048c478c073e808e2ff3ed.js
 restaurant_picker.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 restaurant_picker/index.js: restaurant_picker-cc0b03132dcc9bd3f1a289dea5964a09.js
 select2.js: select2-76f1a0965197b9543da9c2e702d90feb.js
 select2/index.js: select2-76f1a0965197b9543da9c2e702d90feb.js
+to-markdown.js: to-markdown-d49ad0b5cc780d81f52c77bfe00fa02b.js
+to-markdown/index.js: to-markdown-d49ad0b5cc780d81f52c77bfe00fa02b.js
 admin/admin.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/admin/index.css: admin/admin-8dcd8bf8010362175e649c2cb5ea2726.css
 admin/application.css: admin/application-a2fb5098b7dbb6232e917179a16748cb.css
 admin/application/index.css: admin/application-a2fb5098b7dbb6232e917179a16748cb.css
 application.css: application-be47d70c4feb7f259dab8e7b6d04bbb4.css
 application/index.css: application-be47d70c4feb7f259dab8e7b6d04bbb4.css
+bootstrap-markdown.min.css: bootstrap-markdown.min-497d65ddd42c669004a3c484775256c4.css
+bootstrap-markdown/index.min.css: bootstrap-markdown.min-497d65ddd42c669004a3c484775256c4.css
 bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
