--- a/public/assets/sources_manifest.yml
+++ b/public/assets/sources_manifest.yml
@@ -49,6 +49,7 @@ topBarBG.png: 78e160f5aac3985110e62277150ecf74
 waterfall.jpg: 509fd8265fd4c6e23f3d2c5cc9745bd3
 admin/application.js: 2921ef9c0b76325246bbbd05c6ab45c1
 admin/highcharts.js: 13a50ce6d39c982250df3a5eee5f4ddb
+admin/newEvent.js: 715fb1beb81998da833077ab22555980
 application.js: e3df0d09517cf77385a52665b1174860
 bootstrap-datepicker.js: b0082f25812fba89994a872b5d373b29
 bootstrap-formhelpers-datepicker.en_US.js: 430e9104410e7500cd81b6fe03b91e49
@@ -62,6 +63,7 @@ cycle.js: bb7edcd472ef7904eefe979089fd61dd
 events.js: afcb75ac658d3ed1338632cb0219a481
 index.html: dc4e7e08d4bfba4dbf19714fe6628101
 jquery-1.10.2.min.js: e057b6e3bc8a89d93c0761af5f42c3d9
+jquery-ui-1.10.3.custom.js: a1e6cf74ce36f07f2700fb2311812542
 jquery.bootstrap.wizard.js: 261895e4fa6dd2d6bd4aed04a10930e8
 jquery.gallery.js: af864011d9509f1d0cb2bf0118d01eb1
 jquery.nanoscroller.min.js: 12ad99004fbc2e9fba0b0d5ee9e7672e
@@ -69,8 +71,8 @@ markdown.js: 182d669049bdd03f8a492e97ff79f867
 restaurant_picker.js: 014673f6c819af153d9fb7d92a54bab9
 select2.js: c2d33915e0b227927e7da558b4107f76
 to-markdown.js: cf539dd715150a9a7182237d2e062b63
-admin/admin.css: 5fc4ba6f27887001fa9f4bed9dae7efe
-admin/application.css: e1d42163e68a7386c88e2d7bb55e36f0
+admin/admin.css: e7b99cbe770b9e675a47929b5617308c
+admin/application.css: 7bb20918271b03d8817b85f45d83a2b2
 application.css: c0859dd2c42fb1ea835b165b92160cd5
 bootstrap-formhelpers.css: c3c0e37dc84432fe18d43e454b5f02ff
 bootstrap-markdown.min.css: 497d65ddd42c669004a3c484775256c4
