Precompiled assets and preparing to deploy to heroku

--- a/public/assets/sources_manifest.yml
+++ b/public/assets/sources_manifest.yml
@@ -69,11 +69,13 @@ markdown.js: 182d669049bdd03f8a492e97ff79f867
 restaurant_picker.js: 014673f6c819af153d9fb7d92a54bab9
 select2.js: c2d33915e0b227927e7da558b4107f76
 to-markdown.js: cf539dd715150a9a7182237d2e062b63
+zoomflow/zoomflow.dev.js: f919a37c414c04b6bea2b8f508af3e49
 admin/admin.css: 5fc4ba6f27887001fa9f4bed9dae7efe
-admin/application.css: e1d42163e68a7386c88e2d7bb55e36f0
-application.css: c0859dd2c42fb1ea835b165b92160cd5
+admin/application.css: 63a1f3cfd1e54270fdee09c3035b7af2
+application.css: 8abf44a8b9f0b6b47c7c118b5f8d0b02
 bootstrap-formhelpers.css: c3c0e37dc84432fe18d43e454b5f02ff
 bootstrap-markdown.min.css: 497d65ddd42c669004a3c484775256c4
+bootstrap-responsive.css: 1d7b538d042a391ca0253aea79916ad9
 bootstrap-timepicker.css: 650d6c7cd29d81a42822bd1213d7dbbd
 bootstrap.css: fd4ba57acea88e67ddeb6f0cb5a9fd2b
 buttons.css: 27b5cef2183425621675abd8ebaf8a2c
