--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -138,16 +138,20 @@ select2.js: select2-76f1a0965197b9543da9c2e702d90feb.js
 select2/index.js: select2-76f1a0965197b9543da9c2e702d90feb.js
 to-markdown.js: to-markdown-d49ad0b5cc780d81f52c77bfe00fa02b.js
 to-markdown/index.js: to-markdown-d49ad0b5cc780d81f52c77bfe00fa02b.js
+zoomflow/zoomflow.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
+zoomflow/zoomflow/index.dev.js: zoomflow/zoomflow.dev-23dcf2a97da4ae698d066a41dccee462.js
 admin/admin.css: admin/admin-d41c7d90ae5d1b5fc8558c4b5e12ffa4.css
 admin/admin/index.css: admin/admin-d41c7d90ae5d1b5fc8558c4b5e12ffa4.css
-admin/application.css: admin/application-c937bc6076e9f44db06f0a1e3906566a.css
-admin/application/index.css: admin/application-c937bc6076e9f44db06f0a1e3906566a.css
-application.css: application-5346c73feb6f359e0d4d401d0ae87133.css
-application/index.css: application-5346c73feb6f359e0d4d401d0ae87133.css
+admin/application.css: admin/application-68e3a1544917419dcb065a50d739dcd2.css
+admin/application/index.css: admin/application-68e3a1544917419dcb065a50d739dcd2.css
+application.css: application-32521a9b677fcdeb2cb7a55941c85c73.css
+application/index.css: application-32521a9b677fcdeb2cb7a55941c85c73.css
 bootstrap-formhelpers.css: bootstrap-formhelpers-faaa71a4bd575e5b7651e644ee16c808.css
 bootstrap-formhelpers/index.css: bootstrap-formhelpers-faaa71a4bd575e5b7651e644ee16c808.css
 bootstrap-markdown.min.css: bootstrap-markdown.min-497d65ddd42c669004a3c484775256c4.css
 bootstrap-markdown/index.min.css: bootstrap-markdown.min-497d65ddd42c669004a3c484775256c4.css
+bootstrap-responsive.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
+bootstrap-responsive/index.css: bootstrap-responsive-3a0afd040e59f425bf14fee96ce2985e.css
 bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
 bootstrap-timepicker/index.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
 bootstrap.css: bootstrap-ddb0d7d87e8bb7119e902e3e8998df0d.css
