--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -146,12 +146,14 @@ admin/admin.css: admin/admin-08fde8e76374e30f8d70286a3b3c3fbd.css
 admin/admin/index.css: admin/admin-08fde8e76374e30f8d70286a3b3c3fbd.css
 admin/application.css: admin/application-ad8965d40decf61d16b9af6f2faea9b6.css
 admin/application/index.css: admin/application-ad8965d40decf61d16b9af6f2faea9b6.css
-application.css: application-43c8ff0f06bbd532951b3627e8162ee5.css
-application/index.css: application-43c8ff0f06bbd532951b3627e8162ee5.css
+application.css: application-6f4292ab792bce801f6f0d6f1da77c02.css
+application/index.css: application-6f4292ab792bce801f6f0d6f1da77c02.css
 bootstrap-formhelpers.css: bootstrap-formhelpers-faaa71a4bd575e5b7651e644ee16c808.css
 bootstrap-formhelpers/index.css: bootstrap-formhelpers-faaa71a4bd575e5b7651e644ee16c808.css
 bootstrap-markdown.min.css: bootstrap-markdown.min-497d65ddd42c669004a3c484775256c4.css
 bootstrap-markdown/index.min.css: bootstrap-markdown.min-497d65ddd42c669004a3c484775256c4.css
+bootstrap-timepicker.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
+bootstrap-timepicker/index.css: bootstrap-timepicker-507a15d551ef65cab721d901af6a8a7f.css
 bootstrap.css: bootstrap-ddb0d7d87e8bb7119e902e3e8998df0d.css
 bootstrap/index.css: bootstrap-ddb0d7d87e8bb7119e902e3e8998df0d.css
 buttons.css: buttons-7b5425fb8695ca124851c869e9f2a789.css
@@ -170,7 +172,9 @@ prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 select2.css: select2-b3fa53946b9cdf68e3de6b61f61a2f58.css
 select2/index.css: select2-b3fa53946b9cdf68e3de6b61f61a2f58.css
-style.css: style-50fd248fa62548449ba0bd01c0132422.css
-style/index.css: style-50fd248fa62548449ba0bd01c0132422.css
+style.css: style-12bf615e96d7fca9bb3b18a622ba903c.css
+style/index.css: style-12bf615e96d7fca9bb3b18a622ba903c.css
+zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
+zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
