--- a/public/assets/sources_manifest.yml
+++ b/public/assets/sources_manifest.yml
@@ -73,9 +73,10 @@ select2.js: c2d33915e0b227927e7da558b4107f76
 to-markdown.js: cf539dd715150a9a7182237d2e062b63
 admin/admin.css: e7b99cbe770b9e675a47929b5617308c
 admin/application.css: 7bb20918271b03d8817b85f45d83a2b2
-application.css: bf48df9a88e5e800144abd95c1fc4062
+application.css: 0a45838ca49cf1d44e51bb5dba76fa56
 bootstrap-formhelpers.css: c3c0e37dc84432fe18d43e454b5f02ff
 bootstrap-markdown.min.css: 497d65ddd42c669004a3c484775256c4
+bootstrap-timepicker.css: 650d6c7cd29d81a42822bd1213d7dbbd
 bootstrap.css: fd4ba57acea88e67ddeb6f0cb5a9fd2b
 buttons.css: 27b5cef2183425621675abd8ebaf8a2c
 custom.css: 4b114cb6dd6526a2f00dc04222b2c9eb
@@ -85,5 +86,6 @@ font-awesome.css: ea9682b6b274fb93ef55f43cf2c28d2f
 nanoscroller.css: 2f98d8f979db96969ddc1fd5497b0eef
 prettify.css: eb91c3cf87ace942c55813a319755201
 select2.css: 3a3678d596c085612bc14115d8a5df7e
-style.css: e4fb243fcc901b726363713775d72204
+style.css: 3772c2507e9e6e843841246d909916ed
+zoomflow.css: 255cf4ba4171354bb291452c29c1d415
 jquery.min.map: 6c267bfd2b3f36e6edccb2e584934c1c
