--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -25,8 +25,14 @@ Jennifer-Lawrence.jpg: Jennifer-Lawrence-96ec5049feae13cfd0bea477a396b512.jpg
 Jennifer-Lawrence/index.jpg: Jennifer-Lawrence-96ec5049feae13cfd0bea477a396b512.jpg
 alert-overlay.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
 alert-overlay/index.png: alert-overlay-1761c70e8456d8ddae4e0caca3a58c21.png
+allianceLogo.png: allianceLogo-e496fbc5fff44e0fd8a3cfbb1155cad9.png
+allianceLogo/index.png: allianceLogo-e496fbc5fff44e0fd8a3cfbb1155cad9.png
 background.png: background-fda7cbe4b71ca00010aa6277a08ae735.png
 background/index.png: background-fda7cbe4b71ca00010aa6277a08ae735.png
+checkoutBG.png: checkoutBG-f98178eed0522658d3d9ef1a420965db.png
+checkoutBG/index.png: checkoutBG-f98178eed0522658d3d9ef1a420965db.png
+cimbLogo.png: cimbLogo-fac0d75f40f62fba45856605513c96f0.png
+cimbLogo/index.png: cimbLogo-fac0d75f40f62fba45856605513c96f0.png
 community-dining.png: community-dining-d16cdfbbf0a143259195a670905f8ff1.png
 community-dining/index.png: community-dining-d16cdfbbf0a143259195a670905f8ff1.png
 contentBG.png: contentBG-e5b71b7528a353ed6568848d3dfb261b.png
@@ -53,6 +59,8 @@ groupsBG.png: groupsBG-7389488e3dff557f47c0bab111c01a94.png
 groupsBG/index.png: groupsBG-7389488e3dff557f47c0bab111c01a94.png
 headerBG.png: headerBG-d4c95e03b452f2190b06dfa4a6f8da78.png
 headerBG/index.png: headerBG-d4c95e03b452f2190b06dfa4a6f8da78.png
+hongLeongBank.png: hongLeongBank-354d6d5640846e0b3d6a6687b70bae23.png
+hongLeongBank/index.png: hongLeongBank-354d6d5640846e0b3d6a6687b70bae23.png
 hugh-jackman-thumbnail.jpg: hugh-jackman-thumbnail-fd6cc7440950106b9a6c1013cc8b0c83.jpg
 hugh-jackman-thumbnail/index.jpg: hugh-jackman-thumbnail-fd6cc7440950106b9a6c1013cc8b0c83.jpg
 hugh-jackman.jpg: hugh-jackman-8594a9f4522d5497c266f0eac4390a36.jpg
@@ -79,6 +87,12 @@ logo.png: logo-e3b941e5fb1677289e0d7cd6aa869c21.png
 logo/index.png: logo-e3b941e5fb1677289e0d7cd6aa869c21.png
 logo_shrunk.png: logo_shrunk-36cd05e7145eeeb765ed9c861e483479.png
 logo_shrunk/index.png: logo_shrunk-36cd05e7145eeeb765ed9c861e483479.png
+maybank2U.png: maybank2U-c62e2a43c1a13c57b760d79e474e123d.png
+maybank2U/index.png: maybank2U-c62e2a43c1a13c57b760d79e474e123d.png
+mepsCash.png: mepsCash-96f38df831cd4a6083c85bc1cd3aae3e.png
+mepsCash/index.png: mepsCash-96f38df831cd4a6083c85bc1cd3aae3e.png
+mepsFPX.png: mepsFPX-c7ace61001aca6f1a454d02cbe55bcfd.png
+mepsFPX/index.png: mepsFPX-c7ace61001aca6f1a454d02cbe55bcfd.png
 noProfilePic.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
 noProfilePic/index.png: noProfilePic-d55d6f5f58c3c10b3ee56ce81c367105.png
 poloroid.png: poloroid-2a2c3d331a8546fcac4aa0d72edc90ce.png
@@ -146,8 +160,8 @@ admin/admin.css: admin/admin-08fde8e76374e30f8d70286a3b3c3fbd.css
 admin/admin/index.css: admin/admin-08fde8e76374e30f8d70286a3b3c3fbd.css
 admin/application.css: admin/application-ad8965d40decf61d16b9af6f2faea9b6.css
 admin/application/index.css: admin/application-ad8965d40decf61d16b9af6f2faea9b6.css
-application.css: application-7398f0d92a53f420fbc1011244990875.css
-application/index.css: application-7398f0d92a53f420fbc1011244990875.css
+application.css: application-8bece3af36c6f4bee93443ecc5d5fcd2.css
+application/index.css: application-8bece3af36c6f4bee93443ecc5d5fcd2.css
 bootstrap-formhelpers.css: bootstrap-formhelpers-faaa71a4bd575e5b7651e644ee16c808.css
 bootstrap-formhelpers/index.css: bootstrap-formhelpers-faaa71a4bd575e5b7651e644ee16c808.css
 bootstrap-markdown.min.css: bootstrap-markdown.min-497d65ddd42c669004a3c484775256c4.css
@@ -172,8 +186,8 @@ prettify.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 prettify/index.css: prettify-1c0d6850ec95627c0ae574062b3865f2.css
 select2.css: select2-b3fa53946b9cdf68e3de6b61f61a2f58.css
 select2/index.css: select2-b3fa53946b9cdf68e3de6b61f61a2f58.css
-style.css: style-1575b7c8bd8257086541fde53e99e441.css
-style/index.css: style-1575b7c8bd8257086541fde53e99e441.css
+style.css: style-5b3d036a5fd279e3a060bc2310c34842.css
+style/index.css: style-5b3d036a5fd279e3a060bc2310c34842.css
 zoomflow.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 zoomflow/index.css: zoomflow-74815dbce6c1135a83ee4f17cfc0e6ee.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
