--- a/public/assets/sources_manifest.yml
+++ b/public/assets/sources_manifest.yml
@@ -81,6 +81,7 @@ select2.js: c2d33915e0b227927e7da558b4107f76
 to-markdown.js: cf539dd715150a9a7182237d2e062b63
 admin/admin.css: 0dbf87aabbe4895bd54bf97556cb280e
 admin/application.css: 13ae20a1e9cc8ba7db301915aa5072f3
+admin/buttons.css: 8b779be62e11b5bb7e8aff772158fff7
 admin/simple-sidebar.css: 0adb5067489523d74606e579d0be6808
 application.css: 96fceac74f804bf89de4a30be81cb50c
 bootstrap-formhelpers.css: c3c0e37dc84432fe18d43e454b5f02ff
