Precompiled assets and added bootstrap.css to the precompile list

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -37,10 +37,12 @@ summaryImageFillers/hostPic.jpg: summaryImageFillers/hostPic-b82576eaf4df0b31d28
 summaryImageFillers/hostPic/index.jpg: summaryImageFillers/hostPic-b82576eaf4df0b31d2890dab791eccf9.jpg
 application.js: application-9eed1167e63a25dbae78ec1a813e06a6.js
 application/index.js: application-9eed1167e63a25dbae78ec1a813e06a6.js
-application.css: application-98422d8c0079a4ed23f55beeb2e77b73.css
-application/index.css: application-98422d8c0079a4ed23f55beeb2e77b73.css
-style.css: style-83e743bebf028040525b4ac8e9271618.css
-style/index.css: style-83e743bebf028040525b4ac8e9271618.css
+application.css: application-fdff0ecef53db4f4ab330d03a53b1ed2.css
+application/index.css: application-fdff0ecef53db4f4ab330d03a53b1ed2.css
+lib/bootstrap/bootstrap.css: lib/bootstrap/bootstrap-ddb0d7d87e8bb7119e902e3e8998df0d.css
+lib/bootstrap/bootstrap/index.css: lib/bootstrap/bootstrap-ddb0d7d87e8bb7119e902e3e8998df0d.css
+lib/buttons.css: lib/buttons-79b0078e045fc0d0d53c7fd553e8f35d.css
+lib/buttons/index.css: lib/buttons-79b0078e045fc0d0d53c7fd553e8f35d.css
 events/edit.html: events/edit-1b13569e9620782f423d4cd3ce931750.html
 events/edit/index.html: events/edit-1b13569e9620782f423d4cd3ce931750.html
 events/new.html: events/new-c80b930310563c75f73a3ad18303215c.html
