--- a/public/assets/sources_manifest.yml
+++ b/public/assets/sources_manifest.yml
@@ -18,8 +18,9 @@ summaryImageFillers/download (3).jpg: b485414c458fd60eca02d1cf3b09211f
 summaryImageFillers/hostPic-Trimmed.jpg: 150d5d3ec34c7a8e1252ac35ecfaadfc
 summaryImageFillers/hostPic.jpg: b82576eaf4df0b31d2890dab791eccf9
 application.js: 74be839963f62a0223d5590661890ef8
-application.css: 82e3e3a49fbe67a8679b5a83b8aeae7a
-style.css: c52b3851eb36df3ab2236baa8136d3fd
+application.css: 47737e85c0888b108b2cd2206b3361ab
+lib/bootstrap/bootstrap.css: fd4ba57acea88e67ddeb6f0cb5a9fd2b
+lib/buttons.css: a5ddb651d2e7e49386ad6df52de539ee
 events/edit.html: 1b13569e9620782f423d4cd3ce931750
 events/new.html: c80b930310563c75f73a3ad18303215c
 home/home.html: 0ee9cde0a83088d741f413c3de04059a
