--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,40 @@
 ---
+FontAwesome.otf: FontAwesome-d2e1f2cb067bb8a9b129341f5ed85582.otf
+FontAwesome/index.otf: FontAwesome-d2e1f2cb067bb8a9b129341f5ed85582.otf
+fontawesome-webfont.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont/index.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont/index.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont/index.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+fontawesome-webfont/index.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+glyphicons-halflings-regular.eot: glyphicons-halflings-regular-a976b4f46980969d9792e0ff9f3afc17.eot
+glyphicons-halflings-regular/index.eot: glyphicons-halflings-regular-a976b4f46980969d9792e0ff9f3afc17.eot
+glyphicons-halflings-regular.svg: glyphicons-halflings-regular-595b0dff8f518e7a10f758209838ab0b.svg
+glyphicons-halflings-regular/index.svg: glyphicons-halflings-regular-595b0dff8f518e7a10f758209838ab0b.svg
+glyphicons-halflings-regular.ttf: glyphicons-halflings-regular-b7248b70474d970f596df264c4f9b5ab.ttf
+glyphicons-halflings-regular/index.ttf: glyphicons-halflings-regular-b7248b70474d970f596df264c4f9b5ab.ttf
+glyphicons-halflings-regular.woff: glyphicons-halflings-regular-c866ecc8bb1c848e2a8557b67499891d.woff
+glyphicons-halflings-regular/index.woff: glyphicons-halflings-regular-c866ecc8bb1c848e2a8557b67499891d.woff
+logo.png: logo-e205c651561c922f1b8290a179173307.png
+logo/index.png: logo-e205c651561c922f1b8290a179173307.png
+sliderFillerImages/download (1).jpg: sliderFillerImages/download (1)-ea0d5042f301ccb601da0ae80884b25d.jpg
+sliderFillerImages/download (1)/index.jpg: sliderFillerImages/download (1)-ea0d5042f301ccb601da0ae80884b25d.jpg
+sliderFillerImages/download (2).jpg: sliderFillerImages/download (2)-72dbb5045b66ab645811c16d4f816055.jpg
+sliderFillerImages/download (2)/index.jpg: sliderFillerImages/download (2)-72dbb5045b66ab645811c16d4f816055.jpg
+sliderFillerImages/download (3).jpg: sliderFillerImages/download (3)-b8b8ab6164b08ca6e95434f50fd40c2f.jpg
+sliderFillerImages/download (3)/index.jpg: sliderFillerImages/download (3)-b8b8ab6164b08ca6e95434f50fd40c2f.jpg
+sliderFillerImages/download (4).jpg: sliderFillerImages/download (4)-028582c0701139cf9d3f5e6de49f08b4.jpg
+sliderFillerImages/download (4)/index.jpg: sliderFillerImages/download (4)-028582c0701139cf9d3f5e6de49f08b4.jpg
+sliderFillerImages/download.jpg: sliderFillerImages/download-ea0d5042f301ccb601da0ae80884b25d.jpg
+sliderFillerImages/download/index.jpg: sliderFillerImages/download-ea0d5042f301ccb601da0ae80884b25d.jpg
+summaryImageFillers/download (3).jpg: summaryImageFillers/download (3)-b485414c458fd60eca02d1cf3b09211f.jpg
+summaryImageFillers/download (3)/index.jpg: summaryImageFillers/download (3)-b485414c458fd60eca02d1cf3b09211f.jpg
+summaryImageFillers/hostPic-Trimmed.jpg: summaryImageFillers/hostPic-Trimmed-150d5d3ec34c7a8e1252ac35ecfaadfc.jpg
+summaryImageFillers/hostPic-Trimmed/index.jpg: summaryImageFillers/hostPic-Trimmed-150d5d3ec34c7a8e1252ac35ecfaadfc.jpg
+summaryImageFillers/hostPic.jpg: summaryImageFillers/hostPic-b82576eaf4df0b31d2890dab791eccf9.jpg
+summaryImageFillers/hostPic/index.jpg: summaryImageFillers/hostPic-b82576eaf4df0b31d2890dab791eccf9.jpg
 app/app.js: app/app-7555543dd2b948adef743d41d78b9f23.js
 app/app/index.js: app/app-7555543dd2b948adef743d41d78b9f23.js
 app/controllers/HomeController.js: app/controllers/HomeController-170e0632e1f29ddb024a015820508d69.js
@@ -43,6 +79,16 @@ lib/slider/slider.min.css: lib/slider/slider.min-3b913b2a20317e1c9425c1d70e94e98
 lib/slider/slider/index.min.css: lib/slider/slider.min-3b913b2a20317e1c9425c1d70e94e987.css
 style.css: style-83e743bebf028040525b4ac8e9271618.css
 style/index.css: style-83e743bebf028040525b4ac8e9271618.css
+events/edit.html: events/edit-1b13569e9620782f423d4cd3ce931750.html
+events/edit/index.html: events/edit-1b13569e9620782f423d4cd3ce931750.html
+events/new.html: events/new-c80b930310563c75f73a3ad18303215c.html
+events/new/index.html: events/new-c80b930310563c75f73a3ad18303215c.html
+home/home.html: home/home-0ee9cde0a83088d741f413c3de04059a.html
+home/home/index.html: home/home-0ee9cde0a83088d741f413c3de04059a.html
+users/login.html: users/login-10d714807a41e4a85b2b6bc104dd81bf.html
+users/login/index.html: users/login-10d714807a41e4a85b2b6bc104dd81bf.html
+users/register.html: users/register-0fb051be93d273220cb1d7d6dfd61846.html
+users/register/index.html: users/register-0fb051be93d273220cb1d7d6dfd61846.html
 angular-ui-router.min.js: angular-ui-router.min-efc6f16a32892d4e3d389cee2e55cd70.js
 angular-ui-router/index.min.js: angular-ui-router.min-efc6f16a32892d4e3d389cee2e55cd70.js
 jquery-ui.js: jquery-ui-a46ee80b2a395a15bd1c31602752f528.js
@@ -53,6 +99,8 @@ jquery.js: jquery-186cad25611b3c790cb50517ee029d2a.js
 jquery/index.js: jquery-186cad25611b3c790cb50517ee029d2a.js
 jquery.min.js: jquery.min-d1c99fc867a5385897c0d98fb4b7c077.js
 jquery/index.min.js: jquery.min-d1c99fc867a5385897c0d98fb4b7c077.js
+jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
+jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery_ujs.js: jquery_ujs-acedf13f17920500fbbec493b7a75565.js
 jquery_ujs/index.js: jquery_ujs-acedf13f17920500fbbec493b7a75565.js
 coffee-script.js: coffee-script-cbdf69b8f72edbafa7e269f54725eaeb.js
